Early version of service couch